--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,19 @@
 .navbar {
 	font-family: 'Montserrat Alternates', sans-serif;
 	font: bold;
+	background-color: #17a2b8;
+	max-width: 100%;
+	height: auto;
 }
 
+html,
 body {
 	background-image: url(../assets/bckgrd2.jpg);
 	background-size: cover;
+	background-position: top;
 	background-repeat: no-repeat;
 	overflow-x: hidden;
 	max-width: 100%;
-	height: auto;
 }
 
 .title {
@@ -45,12 +49,11 @@ body {
 }
 
 .social-med {
-	position: relative;
 	left: 28.5%;
 	color: white;
 	font-size: 35px;
 	margin-bottom: 0px;
-	padding-top: 3%;
+	padding-top: 1%;
 	max-width: 100%;
 	height: auto;
 }
@@ -71,7 +74,7 @@ body {
 	color: white;
 	font-family: 'Montserrat Alternates', sans-serif;
 	position: relative;
-	padding-top: 4.3%;
+	padding-top: 2.5%;
 	padding-left: 32%;
 	max-width: 100%;
 	height: auto;
